# CortenForge

./: .actrc  .gitignore  .gitmodules  404.html  ARCHITECTURE.md  CF_DESIGN_SPEC.md  CF_GEOMETRY_SPEC.md  COMPLETION_LOG.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  FUTURE.md  INFRASTRUCTURE.md  LICENSE  MIGRATION_CHECKLIST.md  MISSION.md  NOTICE  README.md  REPO_CLEANUP_SPEC.md  STANDARDS.md  VISION.md  WORKSPACE_TRIM_SPEC.md  claude.md  clippy.toml  deny.toml  index.html  print.html  rust-toolchain.toml  rustfmt.toml  searcher-c2a407aa.js  searchindex-9f4a2e82.js  test_edge_case.rs  trained_reaching_2dof.artifact.json
cf-bevy-common/: Cargo.toml
cf-bevy-common/src/: axis.rs  camera.rs  lib.rs  mesh.rs
cf-mesh-paint/: Cargo.toml
cf-mesh-paint/examples/: paint_mesh.rs
cf-mesh-paint/src/: body.rs  brush.rs  input.rs  lib.rs  stroke.rs
cf-viewer/: Cargo.toml  README.md
cf-viewer/src/: camera.rs  cli.rs  colormap.rs  lib.rs  main.rs  mesh.rs  sequence.rs  ui.rs
cortenforge/: Cargo.toml
cortenforge/src/: lib.rs
crates/cf-design/: Cargo.toml
crates/cf-design/src/: adaptive_dc.rs  bounds.rs  dual_contouring.rs  evaluate.rs  evaluate_batch.rs  field_node.rs  gradient.rs  interval.rs  lib.rs  mesher.rs  optim.rs  param_gradient.rs  solid.rs
crates/cf-design/src/mechanism/: actuator.rs  builder.rs  flex_split.rs  integration.rs  joint.rs  mass.rs  material.rs  mjcf.rs  mod.rs  part.rs  print.rs  tendon.rs  validate.rs
crates/cf-spatial/: Cargo.toml
crates/cf-spatial/src/: grid.rs  lib.rs  overlap.rs  raycast.rs
design/cf-cap-planes/: Cargo.toml
design/cf-cap-planes/src/: lib.rs
design/cf-cast/: Cargo.toml
design/cf-cast/src/: bolt_pattern.rs  canal.rs  cast_mode.rs  cure.rs  dowel.rs  dowel_hole.rs  error.rs  flange.rs  funnel.rs  gasket_mold.rs  lib.rs  material.rs  mesh_csg.rs  mesher.rs  part_selection.rs  piece.rs  platform.rs  plug.rs  pour.rs  pour_volume.rs  preview.rs  prismatic_pin.rs  procedure.rs  registration.rs  ribbon.rs  scan_mesh_direct.rs  seam_fit.rs  seam_placement.rs  seam_profile.rs  seam_solver.rs  silhouette_2d.rs  spec.rs
design/cf-cast/tests/: g7_g9_prismatic_pin_probe.rs  g7c_naive_union_paradigm_boundary_probe.rs  iter1_gate.rs  iter_connectivity_inspector.rs  s0_canal_probe.rs  s0_scan_mesh_direct_probe.rs  s0_shell_texture_probe.rs  single_layer_smoke.rs
design/cf-design/: Cargo.toml
design/cf-design-tests/: Cargo.toml
design/cf-design-tests/tests/: l4_physics.rs  l4_roundtrip.rs  mjcf_integration.rs  rung4_concave_contact.rs  rung4b_facet_contact.rs  rung5_ligament_tension.rs  sdf_sphere_diagnostic.rs  threemf_round_trip.rs
design/cf-design-tests/tests/common/: mod.rs
design/cf-design/docs/: SDF_NATIVE_PHYSICS_SPEC.md
design/cf-design/src/: adaptive_dc.rs  bounds.rs  dual_contouring.rs  evaluate.rs  evaluate_batch.rs  field_node.rs  gradient.rs  interval.rs  lib.rs  loft.rs  mesher.rs  mesher_fidelity.rs  optim.rs  param.rs  param_gradient.rs  sdf.rs  simplify.rs  solid.rs  solid_layered.rs
design/cf-design/src/mechanism/: analytical_shape.rs  builder.rs  flex_split.rs  integration.rs  mass.rs  mjcf.rs  mod.rs  model_builder.rs  part.rs  shapes.rs  stl.rs  templates.rs  validate.rs
design/cf-design/src/solid/: mod.rs  (+5 more)
design/cf-device-geometry/: Cargo.toml
design/cf-device-geometry/src/: bevy_mesh.rs  cavity.rs  clip_plane.rs  clip_plane.wgsl  lib.rs  sdf_layers.rs
design/cf-device-types/: Cargo.toml
design/cf-device-types/src/: design.rs  design_toml.rs  lib.rs  scan.rs  sim.rs  slacker.rs
design/cf-fsu-geometry/: BODYPARTS3D.md  Cargo.toml
design/cf-fsu-geometry/src/: lib.rs  loft.rs
design/cf-geometry/: Cargo.toml
design/cf-geometry/src/: aabb.rs  bounded.rs  bvh.rs  convex_hull.rs  curve.rs  geometric.rs  heightfield.rs  lib.rs  mesh.rs  ray.rs  sdf.rs  shape.rs  sphere.rs  support_map.rs  triangle.rs
design/cf-geometry/tests/: aabb_tests.rs  shape_tests.rs  triangle_tests.rs
design/cf-routing/: Cargo.toml
design/cf-routing-tests/: Cargo.toml
design/cf-routing-tests/tests/: real_l4_bore.rs
design/cf-routing/src/: lib.rs
examples/bio-shapes/: Cargo.toml
examples/bio-shapes/src/: main.rs
examples/design-to-sim/: Cargo.toml
examples/design-to-sim/src/: main.rs
examples/mesh-pipeline/: Cargo.toml
examples/mesh-pipeline/src/: main.rs
firmware/pbit-fw-core/: Cargo.toml
firmware/pbit-fw-core/src/: drive.rs  lib.rs  record.rs
geometry/curve-types/: Cargo.toml
geometry/curve-types/src/: arc.rs  bezier.rs  bspline.rs  error.rs  frame.rs  helix.rs  lib.rs  nurbs.rs  ops.rs  polyline.rs  traits.rs
mesh/mesh-assembly/: COMPLETION.md  Cargo.toml
mesh/mesh-assembly/src/: assembly.rs  bom.rs  connection.rs  error.rs  export.rs  lib.rs  part.rs  validation.rs
mesh/mesh-boolean/: COMPLETION.md  Cargo.toml
mesh/mesh-boolean/benches/: boolean_benchmarks.rs
mesh/mesh-boolean/src/: bvh.rs  classify.rs  config.rs  coplanar.rs  edge_insert.rs  error.rs  gpu.rs  intersect.rs  lib.rs  multi.rs  operation.rs
mesh/mesh-decimate/: COMPLETION.md  Cargo.toml
mesh/mesh-decimate/benches/: decimate_benchmarks.rs
mesh/mesh-decimate/src/: decimate.rs  error.rs  lib.rs  params.rs  quadric.rs  result.rs
mesh/mesh-from-curves/: COMPLETION.md  Cargo.toml
mesh/mesh-from-curves/src/: error.rs  frame.rs  lib.rs  tube.rs
mesh/mesh-geodesic/: COMPLETION.md  Cargo.toml
mesh/mesh-geodesic/src/: adjacency.rs  dijkstra.rs  distance.rs  error.rs  lib.rs
mesh/mesh-gpu/: COMPLETION.md  Cargo.toml
mesh/mesh-gpu/benches/: gpu_benchmarks.rs
mesh/mesh-gpu/src/: buffers.rs  context.rs  error.rs  lib.rs  sdf.rs
mesh/mesh-gpu/tests/: integration.rs
mesh/mesh-io/: CHANGELOG.md  COMPLETION.md  Cargo.toml
mesh/mesh-io/benches/: io_benchmarks.rs
mesh/mesh-io/fuzz/: Cargo.toml
mesh/mesh-io/src/: error.rs  lib.rs  obj.rs  ply.rs  step.rs  stl.rs  threemf.rs
mesh/mesh-io/tests/: thingi10k_conformance.rs
xtask/: Cargo.toml  build.rs  validator_timings.json
xtask/src/: affected.rs  check.rs  complete.rs  grade.rs  main.rs  pr_scope.rs  setup.rs  validators.rs  workflow_gate.rs
(+3780 files in other folders)
