# CortenForge Workspace
#
# Industrial-grade foundation, unlimited application.
# From humanoid robots to vehicles to medical simulation.
#
# A-grade or it doesn't ship. No exceptions.

[workspace]
resolver = "2"
members = [
    # Development tooling
    "xtask",

    # Mesh domain (active development)
    "mesh/mesh-types",
    "mesh/mesh-io",
    "mesh/mesh-repair",
    "mesh/mesh-sdf",
    "mesh/mesh-offset",
    "mesh/mesh-shell",
    "mesh/mesh-measure",
    "mesh/mesh-printability",
    "mesh/mesh-lattice",

    # Umbrella crate (re-exports all mesh-* crates)
    "mesh/mesh",

    # Examples — fundamentals
    "examples/fundamentals/design/hello-solid",
    "examples/fundamentals/design/bio-shapes",
    "examples/fundamentals/design/finger-design",
    "examples/fundamentals/mesh/mesh-pipeline",
    "examples/fundamentals/sim-cpu/hinge-joint/simple-pendulum",
    "examples/fundamentals/sim-cpu/hinge-joint/double-pendulum",
    "examples/fundamentals/sim-cpu/slide-joint/horizontal",
    "examples/fundamentals/sim-cpu/slide-joint/vertical",
    "examples/fundamentals/sim-cpu/ball-joint/spherical-pendulum",
    "examples/fundamentals/sim-cpu/ball-joint/cone-limit",
    "examples/fundamentals/sim-cpu/ball-joint/conical-pendulum",
    "examples/fundamentals/sim-cpu/ball-joint/cone-limit-orbit",
    "examples/fundamentals/sim-cpu/sensors/clock",
    "examples/fundamentals/sim-cpu/sensors/joint-pos-vel",
    "examples/fundamentals/sim-cpu/sensors/frame-pos-quat",
    "examples/fundamentals/sim-cpu/sensors/subtree-com",
    "examples/fundamentals/sim-cpu/sensors/gyro-velocimeter",
    "examples/fundamentals/sim-cpu/sensors/accelerometer",
    "examples/fundamentals/sim-cpu/sensors/touch",
    "examples/fundamentals/sim-cpu/sensors/actuator-force",
    "examples/fundamentals/sim-cpu/sensors/geom-distance",
    "examples/fundamentals/sim-cpu/actuators/motor",
    "examples/fundamentals/sim-cpu/actuators/position-servo",
    "examples/fundamentals/sim-cpu/actuators/velocity-servo",
    "examples/fundamentals/sim-cpu/actuators/damper",
    "examples/fundamentals/sim-cpu/actuators/cylinder",
    "examples/fundamentals/sim-cpu/actuators/integrator",
    "examples/fundamentals/sim-cpu/actuators/activation-filter",
    "examples/fundamentals/sim-cpu/actuators/site-transmission",
    "examples/fundamentals/sim-cpu/actuators/gear-and-limits",
    "examples/fundamentals/sim-cpu/actuators/slider-crank",
    "examples/fundamentals/sim-cpu/multi-scene-test",

    # Examples — fundamentals / sim-cpu / integrators
    "examples/fundamentals/sim-cpu/integrators/comparison",
    "examples/fundamentals/sim-cpu/integrators/comparison-visual",
    "examples/fundamentals/sim-cpu/integrators/standalone/euler",
    "examples/fundamentals/sim-cpu/integrators/standalone/rk4",
    "examples/fundamentals/sim-cpu/integrators/standalone/implicit",
    "examples/fundamentals/sim-cpu/integrators/standalone/implicit-fast",
    "examples/fundamentals/sim-cpu/integrators/standalone/implicit-spring-damper",

    # Examples — fundamentals / sim-cpu / solvers
    "examples/fundamentals/sim-cpu/solvers/comparison",

    # Examples — sdf-physics / cpu (SDF collision proof ladder, 16 baby steps)
    "examples/sdf-physics/cpu/01-sdf-grid",
    "examples/sdf-physics/cpu/02-thin-grid",
    "examples/sdf-physics/cpu/03-freefall",
    "examples/sdf-physics/cpu/04-rest",
    "examples/sdf-physics/cpu/05-drop",
    "examples/sdf-physics/cpu/06-slide",
    "examples/sdf-physics/cpu/07-pair",
    "examples/sdf-physics/cpu/08-stack",
    "examples/sdf-physics/cpu/09-cube-in-box",
    "examples/sdf-physics/cpu/10-ball-in-bowl",
    "examples/sdf-physics/cpu/11-hinge-free",
    "examples/sdf-physics/cpu/12-hinge-wall",
    "examples/sdf-physics/cpu/13-hinge-stop",
    "examples/sdf-physics/cpu/14-damped-hinge",
    "examples/sdf-physics/cpu/15-concave-stop",
    "examples/sdf-physics/cpu/16-socket",

    # Examples — sdf-physics / gpu
    "examples/sdf-physics/gpu/01-hockey",

    # Examples — integration (cross-domain pipelines)
    "examples/integration/design-to-sim",
    "examples/integration/design-to-print",
    "examples/integration/sim-informed-design",
    "examples/integration/full-pipeline",

    # Foundation (active development)
    "design/cf-geometry",
    "design/cf-spatial",

    # Design kernel (active development)
    "design/cf-design",

    # Simulation domain - Layer 0 (Bevy-free)
    "sim/L0/types",
    "sim/L0/simd",
    "sim/L0/core",
    "sim/L0/mjcf",
    "sim/L0/urdf",
    "sim/L0/tests",
    "sim/L0/gpu",

    # Simulation domain - Layer 1 (Bevy integration)
    "sim/L1/bevy",
]

# Exclude directories that aren't workspace members
exclude = [
    "docs",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cortenforge/forge"
authors = ["CortenForge Team"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# unwrap/expect: warn at workspace level (for tests), deny in lib.rs (for library code)
# See docs/INFRASTRUCTURE.md "Safety Lint Policy" for the rationale.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"
# Silent failure prevention: catch discarded Results and #[must_use] values
let_underscore_must_use = "deny"

# ============================================================================
# WORKSPACE DEPENDENCIES
# ============================================================================
# All crates should use { workspace = true } for these dependencies
# to ensure version consistency across the workspace.

[workspace.dependencies]
# ---------------------------------------------------------------------------
# Math Foundation
# ---------------------------------------------------------------------------
# nalgebra: Linear algebra, matches parry3d and avian for compatibility
nalgebra = "0.34"
# (glam removed — was only used by routing crates)

# ---------------------------------------------------------------------------
# Error Handling
# ---------------------------------------------------------------------------
# thiserror: Derive macros for custom error types
thiserror = "2.0"
# anyhow: Flexible error handling for applications
anyhow = "1.0"

# ---------------------------------------------------------------------------
# Serialization
# ---------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# ---------------------------------------------------------------------------
# Spatial & Collision
# ---------------------------------------------------------------------------
# parry3d: Collision detection, BVH, convex hulls
parry3d = "0.17"

# ---------------------------------------------------------------------------
# Randomness
# ---------------------------------------------------------------------------
rand = "0.8"

# ---------------------------------------------------------------------------
# Parallelism
# ---------------------------------------------------------------------------
rayon = "1.10"

# ---------------------------------------------------------------------------
# Data Structures
# ---------------------------------------------------------------------------
hashbrown = "0.16"

# ---------------------------------------------------------------------------
# Image Processing
# ---------------------------------------------------------------------------
image = "0.25"

# ---------------------------------------------------------------------------
# Logging & Tracing
# ---------------------------------------------------------------------------
tracing = "0.1"
# (tracing-subscriber removed — was only used by removed crates)

# ---------------------------------------------------------------------------
# Bevy Ecosystem (Layer 1 only - not used by Layer 0 crates)
# ---------------------------------------------------------------------------
bevy = { version = "0.18", default-features = false }

# ---------------------------------------------------------------------------
# Compression
# ---------------------------------------------------------------------------
zip = "8.1"

# ---------------------------------------------------------------------------
# Mesh I/O Formats
# ---------------------------------------------------------------------------
# PLY format support
ply-rs = "0.1"
# 3MF format support (XML parsing)
quick-xml = "0.38"
# STEP format support (CAD interchange) - truck ecosystem
truck-stepio = "0.3"
truck-modeling = "0.6"
truck-topology = "0.6"
truck-polymesh = "0.6"
truck-meshalgo = "0.4"

# ---------------------------------------------------------------------------
# GPU Compute
# ---------------------------------------------------------------------------
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------
criterion = "0.8"
proptest = "1.10"
approx = "0.5"
tempfile = "3.27"

# ---------------------------------------------------------------------------
# Internal Workspace Crates
# ---------------------------------------------------------------------------
# These are path dependencies for workspace members

# Mesh domain
mesh-types = { path = "mesh/mesh-types" }
mesh-io = { path = "mesh/mesh-io" }
mesh-repair = { path = "mesh/mesh-repair" }
mesh-sdf = { path = "mesh/mesh-sdf" }
mesh-offset = { path = "mesh/mesh-offset" }
mesh-shell = { path = "mesh/mesh-shell" }
mesh-measure = { path = "mesh/mesh-measure" }
mesh-printability = { path = "mesh/mesh-printability" }
mesh-lattice = { path = "mesh/mesh-lattice" }

# Umbrella crate
mesh = { path = "mesh/mesh" }

# Geometric kernel
cf-geometry = { path = "design/cf-geometry" }

# Spatial foundation
cf-spatial = { path = "design/cf-spatial" }

# Design kernel
cf-design = { path = "design/cf-design" }

# Sim domain - Layer 0 (Bevy-free)
sim-types = { path = "sim/L0/types" }
sim-simd = { path = "sim/L0/simd" }
sim-core = { path = "sim/L0/core" }
sim-mjcf = { path = "sim/L0/mjcf" }
sim-urdf = { path = "sim/L0/urdf" }
sim-gpu = { path = "sim/L0/gpu" }
# Sim domain - Layer 1 (Bevy integration)
sim-bevy = { path = "sim/L1/bevy" }

